
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service]. 

[[v0.28.0]]
== 0.28.0 (TBD)

CAUTION: The property `meshNodeId` of the `/api/v1/` response was renamed to `meshNodeName` to be more consistent.

icon:plus[] Eventbus: It is now possible to register custom eventbus addresses.

icon:plus[] REST: Download of binaries will now support byte range requests. Web media players require this feature in order to support seeking in video streams.

icon:check[] Elasticsearch: The check for the `ingest-attachment` plugin was fixed for installations which were using the `AWS` Elasticsearch service.

icon:plus[] API: Make OAuth2 Server options overrideable via environment variables.

icon:check[] REST: A concurrency issue has been fixed which could lead to problems when creating multiple schemas in-parallel.

icon:check[] REST: Fix error message when no Node for a GraphFieldContainer can be found. link:https://github.com/gentics/mesh/issues/364[#364]

[[v0.27.2]]
== 0.27.2 (07.11.2018)

icon:check[] REST: The CPU utilization for download requests has been reduced. link:https://github.com/gentics/mesh/issues/530[#530]

icon:plus[] Core: The Gentics Mesh server will now use native bindings to increase HTTP performance on Linux x86_64 platforms.

icon:check[] REST: Branch create requests will now correctly set the path prefix property. The value of the property was previously not used.

icon:check[] REST: Added more detailed error information when accessing a resource without permission. link:https://github.com/gentics/mesh/issues/314[#314]

[[v0.27.1]]
== 0.27.1 (31.10.2018)
