@@ -28,6 +28,8 @@ title: Changelog
 
 CAUTION: The property `meshNodeId` of the `/api/v1/` response was renamed to `meshNodeName` to be more consistent.
 
+icon:check[] Permissions: A bug in the permission handling has been fixed. Previously the read permission was also granted when create was granted to elements. link:https://github.com/gentics/mesh/issues/562[#562]
+
 icon:plus[] Eventbus: It is now possible to register custom eventbus addresses.
 
 icon:plus[] REST: Download of binaries will now support byte range requests. Web media players require this feature in order to support seeking in video streams.
